[package]
name = "wedding"
version = "0.1.0"
authors = ["Stephen Paul Weber <singpolyma@singpolyma.net>"]

[dependencies]
iron = "*"
router = "*"
urlencoded = "*"
rust-sqlite = "*"

[dependencies.logger]
git = "https://github.com/iron/logger.git"

[dependencies.rustache]
git = "https://github.com/singpolyma/rustache.git"
